src/test/ui/impl-trait/issue-60473.stderr
error[E0720]: opaque type expands to a recursive type
  --> $DIR/issue-60473.rs:15:12
   |
LL |     let x: impl Trait<A> = (); // FIXME: The error doesn't seem correct.
   |            ^^^^^^^^^^^^^ expands to a recursive type
   |
   = note: type resolves to itself

error: aborting due to previous error

For more information about this error, try `rustc --explain E0720`.
